--- a/index.html
+++ b/index.html
@@ -27,33 +27,43 @@
 
     <div id="content">
 
-        <h2>Big Idea: Something New</h3>
+        <h4>[new] 2014.01.11 <a href="forum">Forum</a> has landed!</h4>
 
-        <p>Do you believe that formal education is the key to success?<br>
+        <h2>Buy land. Build school. Live there.</h3>
 
-            <br>
-            That's not the case anymore, there are <strong>much more useful skills</strong> that are not taught in the state schools. Our mission is to create core base and have our children acquire the most knowledge.</p>
-
+        <p>
+            There are many useful skills in life. Such a shame they are not taught in schools. We want create core base and have our children be properly educated.
+        </p>
 
         <h3>Three pillars of education</h3>
             <ul>
-                <li><strong>Social:</strong> community organising, mediation, decision making</li>
-                <li><strong>Tech:</strong> using computers, fixing bikes, growing food</li>
+                <li><strong>Social:</strong> organising, mediation, negotiation, decision making</li>
+                <li><strong>Tech:</strong>  machines, software, agriculure </li>
                 <li><strong>Inner:</strong> logical thinking, problems solving, yoga, meditation </li>
             </ul>
 
         <h3>Masterplan</h3>
-            First we need to obtain land. There are places in the world where real estate prices low and there places where salaries are high. Leveraging these two facts we can actually make this happen. 
+            <p>
+                First we need to obtain land in a sustainable manner... There are places in the world where real estate prices low and there places where salaries are high. Leveraging these two facts we can actually make this happen.
+            </p> 
 
 
-          <h3>Exit strategy</h3>
-          <string>We are here to stay.</string><br>
-          Land will remain one of the most secure forms of capital while the core mission - <strong>education of our children</strong> - will provide huge return of investment for decades to come.
+        <h3>Exit strategy</h3>
+          <string>We are here to stay.</string>
+          <br>
+          <p>
+            Land will remain one of the most secure forms of capital while the core mission - <strong>education of our children</strong> - will provide huge return of investment for decades to come.
+          </p>
         
 
         <div class="cleaner"></div>
 
-         <h3>Sign up or drop a line <a href="mailto:admin@genesis.re">admin@genesis.re</a></h3>
+        <ul>
+            <li>Visit <strong><a href="forum">forum</a></strong></li>
+            <li>Drop a line <a href="mailto:admin@genesis.re">admin@genesis.re</a></li>
+            <li>Sign up</li>
+        </ul>
+
 
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
@@ -69,14 +79,14 @@
 	<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 </form>
 </div>
-
 <!--End mc_embed_signup-->
 
 
-         <footer>
+        <footer>
          The project has just begun and it is not too late to join.<br>
          We want to remain honest, authentic, genuine. <br>
          Truth is the ultimate religion, one that cannot be avoided under any circumstances.<br>
+         Please visit our <strong><a href="forum">forum</a></strong>
         </footer>
 
         <div class="cleaner"></div>
@@ -84,8 +94,6 @@
         <h3>There are enough people to make this happen!</h3>
 
         <div class="cleaner"></div>
-
-
 
 </div> <!-- content -->
 
