new image, fixing CSS for command control!

--- a/forum/index.html
+++ b/forum/index.html
@@ -42,6 +42,14 @@
       .moot {
          font-size: 18px;
       }
+
+      h1 {
+         font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+         line-height: 1.5em;
+         font-weight: 700;
+         margin-left: 20px;
+      }
+
       </style>
 
       <!-- (1) Moot depends on jQuery v1.7 or greater -->
@@ -53,6 +61,10 @@
    </head>
 
    <body>
+
+      <h1><a href="http://genesis.re">genesis.re</a></h1>
+
+      <hr>
 
       <!-- (2) Placeholder for the forum. The forum will be rendered inside this element -->
       <a class="moot" href="https://moot.it/i/genesis">genesis forums</a>
