--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     
 
     <div id="content">
-
         <h4>[new] 2014.01.11 <a href="forum">Forum</a> has landed!</h4>
+
+        <h1>genesis.re</h1>
 
         <h2>Buy land. Build school. Live there.</h3>
 
@@ -60,6 +61,7 @@
 
         <ul>
             <li>Visit <strong><a href="forum">forum</a></strong></li>
+            <li>Follow on Twitter <a href="https://twitter.com/genesisdotre">@genesisdotre</a></li>
             <li>Drop a line <a href="mailto:admin@genesis.re">admin@genesis.re</a></li>
             <li>Sign up</li>
         </ul>
