Added a video (genesis hack)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
     
 
     <div id="content">
-        <h4>[new] 2014.01.11 <a href="forum">Forum</a> has landed!</h4>
+        <!-- <h4>[new] 2014.01.11 <a href="forum">Forum</a> has landed!</h4> -->
+        <h4>[new] 2014.05.21 <a href="hack">#coliving #coworking</a> </h4>
+
+        <iframe width="560" height="315" src="//www.youtube.com/embed/OVqpzzvX230" frameborder="0" allowfullscreen></iframe>
+
+        <p>Honestly: the big idea with land and school is kind of a long-term strategy that requires a lot of capital. Currently I use what I already have - the space - and you are free to join me. One disclaimer: I want you to want, no excessive marketing efforts from my side.</p>
 
         <h1>genesis.re</h1>
 
