--- a/index.html
+++ b/index.html
@@ -71,15 +71,16 @@
 
         <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
         <style type="text/css">
-            #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; color: black;}
+            #mc_embed_signup{background:transparent; clear:left; font:14px Helvetica,Arial,sans-serif; color: black;}
         </style>
         <div id="mc_embed_signup">
             <form action="http://genesis.us7.list-manage.com/subscribe/post?u=14366d3065bd1fa17ab3d24aa&amp;id=59e9817262" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                <label for="mce-EMAIL">Subscribe to our mailing list</label>
                 <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
                 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
             </form>
-        </div>        
+        </div>   
+
+        <h3>Thank, your voice is highly appreciated</h3>     
         
         <footer>
          The project has just begun.<br>
