--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <div id="content">
 
         <h1>genesis.re</h1>
+        
+        <p>TEST - configuration on github - TEST</p>
 
         <h3 class="bull">&bull; Immortality</h3>
         <h3 class="bull">&bull; Enlightenment</h3>
