Removing test file + updating cmdctrl path

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
     <div id="content">
 
         <h1>genesis.re</h1>
-        
-        <p>TEST - configuration on github - TEST</p>
 
         <h3 class="bull">&bull; Immortality</h3>
         <h3 class="bull">&bull; Enlightenment</h3>
@@ -85,5 +83,5 @@
     </div> <!-- content -->
 
     </body>
-    <script src="cmdctrl.js"></script>
+    <script src="http://genesis.re/cmdctrl/cmdctrl.js"></script>
 </html>
