adding jQuery so the cmdctrl dependency is fulfilled

--- a/index.html
+++ b/index.html
@@ -83,5 +83,6 @@
     </div> <!-- content -->
 
     </body>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="http://genesis.re/cmdctrl/cmdctrl.js"></script>
 </html>
