--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
-			<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+			<script src="http://genesis.re/cmdctrl/cmdctrl.js"></script>
 
 	</body>
 </html>
