--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
+		<link rel="icon" type="image/png" href="favicon.ico" />
+		<link rel="icon" type="image/gif" href="favicon.ico" />	
+
 
 		<style>
 		#titleBar { display: none !important ;}
@@ -158,6 +162,17 @@
 							<h2>Contact me</h2>
 							<p>Yes, it is just me at the moment.</p>
 							<p><a id="mstefanow_email" href="mailto:mstefanow@gmail.com">mstefanow@gmail.com</a></p>
+							<p> 
+
+
+<a href="https://twitter.com/intent/tweet?screen_name=genesisdotre" class="twitter-mention-button" data-size="large" data-related="genesisdotre">Tweet to @genesisdotre</a>
+<a href="https://twitter.com/intent/tweet?screen_name=stefek99" class="twitter-mention-button" data-size="large" data-related="stefek99">Tweet to @stefek99</a>
+
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+</p>
+
+
 						</header>
 <!-- 						<form method="post" action="#" class="container 50%">
 							<div class="row uniform 50%">
