--- a/index.html
+++ b/index.html
@@ -1,216 +1,56 @@
-<!DOCTYPE HTML>
-<!--
-	Landed by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+<!-- 
+  Thank you for stopping by...
+  #cccamp15
+  Boom!
+
+  (no cookies, no JS, no BS, just me)
 -->
+
+<!DOCTYPE html>
 <html>
 	<head>
-		<title>genesis.RE</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-
-		<link rel="icon" type="image/x-icon" href="favicon.ico" />
-		<link rel="icon" type="image/png" href="favicon.ico" />
-		<link rel="icon" type="image/gif" href="favicon.ico" />	
+	<meta charset="UTF-8">
+		<title>genesis.re</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 
 		<style>
-		#titleBar { display: none !important ;}
-		#mstefanow_email { color: white; font-weight: bold; font-size: 2em;}
-		@media screen and (max-width: 736px) {
-			h2 {
-				font-size: 3em !important;
-				margin-bottom: 15px;
-			}
-		}
-
-
+		html { background: url(genesis-Alexander-Ward-RESIZED.jpg) no-repeat center center fixed; background-size: cover; }
+			* { font-family: monospace }
+			a { color: yellow; }
+			article { width: 75%;max-width: 600px; color: white; margin: 20px auto; background-color: rgba(0,0,0,0.85); padding: 20px; }
 		</style>
 	</head>
-	<body class="landing">
-		<div id="page-wrapper">
+	<body>
+		<article>
+	<h1>genesis.re</h1>
 
-			<!-- Banner -->
-				<section id="banner">
-					<div class="content">
-						<header>
-							<h2>genesis.RE</h2>
-							<span style="text-align:left;margin-left:70px;display: inline-block;">
-								<p>• Immortality</p>
-								<p>• Enlightenment</p>
-								<p>• Survival of the human species</p>
-							</span>
-						</header>
-						<span class="image"><img src="images/genesis-logo.jpg" alt="" /></span>
-					</div>
-					<a href="#one" class="goto-next scrolly">Next</a>
-				</section>
+	<p>Once upon a time a set myself a goal - after achieving it there was nowhere to go and I became depressed. I'm not going to make that mistake again.<p>
 
-			<!-- One -->
-				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
-					<div class="content">
-						<div class="container">
-							<div class="row">
-								<div class="4u 12u$(medium)">
-									<header>
-										<h2>Aim for the moon...</h2>
-										<p>...even if you miss, you'll land among the stars.</p>
-									</header>
-								</div>
-								<div class="4u 12u$(medium)">
-									<p><!-- Obviosly. --></p>
-								</div>
-								<div class="4u$ 12u$(medium)">
-									<p><!-- I'm pretty sure you know it too. --></p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- Two -->
-				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
-					<div class="content">
-						<header>
-							<h2>They say only 1% of the startups succeed.</h2>
-							<p>That is why we want to invest in 100 entities.</p>
-						</header>
-						<p>Investing in people.</p>
-						<p>Investing in passion.</p>
-						<p>Investing in projects.</p>
-					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- Three -->
-				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
-					<div class="content">
-						<header>
-							<h2>Radical innovation.</h2>
-							<p>Connecting dots at a scale.</p>
-						</header>
-						<p>One of the most significant project - <a href="https://bit.ly/hackbases">#hackbases</a> - coliving and coworking spaces allowing full immersion and harmony.</p>
-						<p>Faciliating creative enviroment.</p>
-						<p>Unlearning the culture.</p>
-						<p>There is no further.</p>
-					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
-				</section>
-
-			<!-- Four -->
-				<section id="four" class="wrapper style1 special fade-up">
-					<div class="container">
-						<header class="major">
-							<h2>Redefining what's possible</h2>
-							<p>Writing scenarios for future to come.</p>
-						</header>
-						<div class="box alt">
-							<div class="row uniform">
-								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-area-chart"></span>
-									<h3>Automation</h3>
-									<p>Software is eating the world.</p>
-								</section>
-								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-comment"></span>
-									<h3>Consciousness</h3>
-									<p>What if a human body is just a container for the consciousness?</p>
-								</section>
-								<section class="4u$ 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-flask"></span>
-									<h3>Creativity</h3>
-									<p>Enhancing brain chemistry.</p>
-								</section>
-								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-paper-plane"></span>
-									<h3>Brain Computer Interfaces</h3>
-									<p>Faster. Better. Harder. Stronger.</p>
-								</section>
-								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-file"></span>
-									<h3>Sharing Economy.</h3>
-									<p>Because it is no good when it is easier to buy new and throw away.</p>
-								</section>
-								<section class="4u$ 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-lock"></span>
-									<h3>Personal Data</h3>
-									<p>Allowing users to take advantage of their data.</p>
-								</section>
-							</div>
-						</div>
-<!-- 						<footer class="major">
-							<ul class="actions">
-								<li><a href="#" class="button">Magna sed feugiat</a></li>
-							</ul>
-						</footer> -->
-					</div>
-				</section>
-
-			<!-- Five -->
-				<section id="five" class="wrapper style2 special fade">
-					<div class="container">
-						<header>
-							<h2>Contact me</h2>
-							<p>Yes, it is just me at the moment.</p>
-							<p><a id="mstefanow_email" href="mailto:mstefanow@gmail.com">mstefanow@gmail.com</a></p>
-							<p> 
+	<p>Currecntly I'm working in Central London  andI should be able to afford to buy the land in about 2.5 - 3 years, however I have an idea how to faciliate this process.</p>
 
 
-<a href="https://twitter.com/intent/tweet?screen_name=genesisdotre" class="twitter-mention-button" data-size="large" data-related="genesisdotre">Tweet to @genesisdotre</a>
-<a href="https://twitter.com/intent/tweet?screen_name=stefek99" class="twitter-mention-button" data-size="large" data-related="stefek99">Tweet to @stefek99</a>
+	<p>I'll invest all my savings into renting a house and creating a highly-optimised hacker enviroment. I'll help you find well-paid gigs and provide for all your needs:
+	<ul>
+		<li>housing</li>
+		<li>food</li>
+		<li>super-fast internet</li>
+		<li>you name it</li>
+		<li>education</li>
+	</ul>
+	</p>
 
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+	<p>Be excellent to each other</p>
+	<p>We are the culture</p>
+	<p>we are the future</p>
+	<p>The future is now</p>
+	<p>Here and now</p>
+	</article>
 
-</p>
+	<footer>
+		Project by @stefek99<br>
+		Artwork by Alexander Ward<br>
+	</footer>
 
-
-						</header>
-<!-- 						<form method="post" action="#" class="container 50%">
-							<div class="row uniform 50%">
-								<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Get Started" class="fit special" /></div>
-							</div>
-						</form> -->
-					</div>
-				</section>
-
-			<!-- Footer -->
-				<footer id="footer">
-<!-- 					<ul class="icons">
-						<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul> -->
-					<ul class="copyright" style="zoom:0.7">
-						<li>&copy; genesis.RE</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
-
-		</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-
-			<script src="http://genesis.re/cmdctrl/cmdctrl.js"></script>
-
-	</body>
+</body>
 </html>
