--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 		<style>
-		html { background: url(genesis-Alexander-Ward-RESIZED.jpg) no-repeat center center fixed; background-size: cover; }
+		html { background: url(http://i.imgur.com/HFDc8be.jpg) no-repeat center center fixed; background-size: cover; }
 			* { font-family: monospace }
 			a { color: yellow; }
 			article { width: 75%;max-width: 600px; color: white; margin: 20px auto; background-color: rgba(0,0,0,0.85); padding: 20px; }
@@ -46,6 +46,35 @@
 	<p>The future is now</p>
 	<p>Here and now</p>
 	</article>
+	
+	<section>
+		<h3>I'm just like you</h3>
+		
+		<!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="//wakacjones.us4.list-manage.com/subscribe/post?u=f7d4defd21860779ebd2e03af&amp;id=da0986ae04" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<label for="mce-EMAIL">Subscribe to our mailing list</label>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_f7d4defd21860779ebd2e03af_da0986ae04" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
+		
+		
+		
+		
+	</section>
 
 	<footer>
 		Project by @stefek99<br>
