--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
 	<p>we are the future</p>
 	<p>The future is now</p>
 	<p>Here and now</p>
-	</article>
+	<p>Be now</p>
+	<p>Be</p>
 	
+
+
 	<section>
 		<h3>I'm just like you</h3>
 		
@@ -75,6 +78,12 @@
 		
 		
 	</section>
+	
+	
+	
+	</article>
+	
+
 
 	<footer>
 		Project by @stefek99<br>
