--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <p>Need to investigate form of land ownership + taxes + ways how to manage finances. Can I haz a hacker lawyer?</p>   
 
   <section>
-  	Working on better ways to stay in touch (thank you @touya, thank you @shibumi). For the moment:
+  	Working on better ways to stay in touch (thank you touya, thank you shibumi). For the moment:
     
     <!-- Begin MailChimp Signup Form -->
       <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
