--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
       </ul>
 
       <h3>My story</h3>
-      <p>I went to Ozora, Boom, Burning Man, Glastonbury and now CCC. It usually involves some money and I was thinking to myself: "what if money was not an issue". Fast forward a few years and I have a decent job that allows me to invest and work on the vision...
+      <p>I went to Ozora, Boom, Burning Man, Glastonbury and now CCC. Having family allows me to think longer term and fight for the future of Gaia (born 2012) and Aura (born 2014).
 
-      <h3>1 year vision</h3>
+      <h3>3 year vision</h3>
       <p>1km<sup>2</sup> of land in Portugal. Satellite internet. Own energy, water, waste treatment, permaculture. </p>
       <p>Portugal: a lot of sun, warm climate, access to the ocean, favourable legal situation.</p>
       <p>Sun = energy, ocean = water, energy + water = fresh water, fresh water + sun = plants, plants = food (rather basic equation)</p>
 
       <h3>10 year vision</h3>
-      <p>Multiple places: US West Coast, Goa, Bali, New Zealand</p>
-      <p>Own currency, own sattelite network, enhancing our bodies (transhumanism)</p>
+      <p>Multiple places: US West Coast, Goa, Bali, New Zealand...</p>
+      <p>Own currency, own passports, own sattelite network, own ICANN...</p>
 
       <h3>Core values</h3>
       <ul>
@@ -60,12 +60,15 @@
        <li>Tamera</li>
     </ul>
 
+    <h3>Money</h3>
+I went to Ozora, Boom, Burning Man, Glastonbury and now CCC. Always on a limited budget and I was thinking to myself: "what if money was not an issue". Fast forward a few years and currently I'm working as a web developer that allows me to save and invest...
+
 
   <h3>Help needed</h3>
-  <p>Need to investigate form of land ownership + taxes + ways how to manage finances. Can I haz a hacker lawyer?</p>   
+  <p>Need to investigate form of ownership + taxes + legal . Can I haz a hacker lawyer?</p>   
 
   <section>
-  	Working on better ways to stay in touch (thank you <strong>touya</strong>, thank you <strong>shibumi</strong>). For the moment:
+    Working on better ways to stay in touch (thank you <strong>touya</strong>, thank you <strong>shibumi</strong>). For the moment:
     
     <!-- Begin MailChimp Signup Form -->
       <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
@@ -87,7 +90,7 @@
       </div>
 
     <!--End mc_embed_signup-->
-	</section>
+  </section>
     
   <footer>
     Project by <a href="https://twitter.com/stefek99">@stefek99</a> and others<br>
