--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <!DOCTYPE html>
 <html>
-  <head>fo
+  <head>
   <meta charset="UTF-8">
     <title>genesis.re</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
