--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <style>
-      html { background: url(http://i.imgur.com/HFDc8be.jpg) no-repeat center center fixed; background-size: cover; }
+      html { background: url(http://i.imgur.com/HFDc8be.jpg) no-repeat center center fixed; background-size: cover; font-size: 1.3em;}
       * { font-family: monospace }
       a { color: yellow; }
       article { width: 75%;max-width: 600px; color: white; margin: 20px auto; background-color: rgba(0,0,0,0.85); padding: 20px; }
@@ -65,7 +65,9 @@ I went to Ozora, Boom, Burning Man, Glastonbury and now CCC. Always on a limited
 
 
   <h3>Help needed</h3>
-  <p>Need to investigate form of ownership + taxes + legal . Can I haz a hacker lawyer?</p>   
+  <p>Need to investigate form of ownership + taxes + legal . Can I haz a hacker lawyer?</p>
+  <p>Other ways of helping <a href="https://events.titanpad.com/57?">see pad</a> - asking because I have some technical difficulties that require significant expertise and it is so much easier if I ask for 10 minutes of your time instead of me making constly mistakes... (I want to do this right from the very beginning)</p>
+  
 
   <section>
     Working on better ways to stay in touch (thank you <strong>touya</strong>, thank you <strong>shibumi</strong>). For the moment:
