--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
       </ul>
 
       <h3>My story</h3>
-      <p>I went to Ozora, Boom, Burning Man, Glastonbury and now CCC. Having family allows me to think longer term and fight for the future of Gaia (born 2012) and Aura (born 2014).
+      <p>I've to many places such as Ozora, Boom, Burning Man, Glastonbury and now CCC. Having family allows me to think longer term and fight for the future of Gaia (born 2012) and Aura (born 2014).
 
       <h3>3 year vision</h3>
-      <p>1km<sup>2</sup> of land in Portugal. Satellite internet. Own energy, water, waste treatment, permaculture. </p>
-      <p>Portugal: a lot of sun, warm climate, access to the ocean, favourable legal situation.</p>
+      <p>1km<sup>2</sup> of land in Portugal. Satellite internet. Own energy, water, waste treatment, permaculture, a lot of sun, warm climate, access to the ocean, favourable legal situation.</p>
       <p>Sun = energy, ocean = water, energy + water = fresh water, fresh water + sun = plants, plants = food (rather basic equation)</p>
 
       <h3>10 year vision</h3>
@@ -60,14 +59,12 @@
        <li>Tamera</li>
     </ul>
 
-    <h3>Money</h3>
-I went to Ozora, Boom, Burning Man, Glastonbury and now CCC. Always on a limited budget and I was thinking to myself: "what if money was not an issue". Fast forward a few years and currently I'm working as a web developer that allows me to save and invest...
-
-
   <h3>Help needed</h3>
   <p>Need to investigate form of ownership + taxes + legal . Can I haz a hacker lawyer?</p>
-  <p>Other ways of helping <a href="https://events.titanpad.com/57?">see pad</a> - asking because I have some technical difficulties that require significant expertise and it is so much easier if I ask for 10 minutes of your time instead of me making constly mistakes... (I want to do this right from the very beginning)</p>
-  
+  <p>Other ways of helping - <a href="https://events.titanpad.com/57?">see pad</a> - asking because that require significant expertise and it is so much easier if I ask for 10 minutes instead of me making constly mistakes... (I want to do this right from the very beginning)</p>
+  <p>I'm not asking for money as I'm currently contracting in Central London. My whole life I was on a limited budget and I was thinking to myself: "what if money was not an object" (<a href="https://www.youtube.com/watch?v=KSyHWMdH9gk">see Youtube by Alan Watts</a>). Currently (by default) choosing best option money can buy... (I want to do this right from the very beginning)</p>
+
+</p>
 
   <section>
     Working on better ways to stay in touch (thank you <strong>touya</strong>, thank you <strong>shibumi</strong>). For the moment:
